# real-time-fraud-detection

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-analysis.txt  requirements-analytics-api.txt  requirements-dbt.txt  requirements.txt
.github/workflows/: ci.yml  deploy-demo.yml
airflow/: Dockerfile  requirements.txt
airflow/dags/: daily_rescore.py  (+3 more)
analysis/: EDA.ipynb  paysim_training.py  profile_data.py
analytics_api/: Dockerfile  __init__.py  main.py
consumer/: anomaly.py  classifier.py  config.py  main.py  rules.py  scoring.py  sink.py  validate.py
dashboard/: app.py  charts.py  data.py  refresh.py
dbt_fraud/: .user.yml  dbt_project.yml  profiles.example.yml
docs/: README.md  REQUIREMENTS.md  analytics.md  architecture.md  data_profile.md  demo.md  dependencies.md  event_schema.json  fraud_detection_system.drawio  index.md  ml_retrain.md  roadmap.md  scoring.md  setup.md
frontend/: .env.demo  .env.example  .npmrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
models/: model-training.ipynb  retrain_manifest.json
producer/: generator.py  paysim_replay.py
scripts/: dev-frontend.ps1  export_classifier_metrics.py  seed_users.py  train_anomaly.py  train_fraud_classifier.py  wait-for.ps1
shared/: analytics_filters.py  analytics_marts.py  anomaly_training.py  dbt_refresh_config.py  fx.py  fx_client.py  fx_provider.py  model_metrics.py  model_retrain.py  paysim_transform.py  schema.py  synthetic.py  transaction_delete.py
(+92 files in other folders)
