[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-fraud-detection"
version = "0.1.0"
description = "Real-time fraud detection pipeline with Kafka, Postgres, and Airflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "confluent-kafka>=2.3"]
consumer = ["confluent-kafka>=2.3", "scikit-learn>=1.3", "joblib>=1.3", "numpy>=1.24", "xgboost>=3.0"]
producer = ["faker>=22.0", "confluent-kafka>=2.3"]
analysis = [
    "faker>=22.0",
    "matplotlib>=3.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "seaborn>=0.13",
]
airflow = ["apache-airflow>=2.8"]
analytics = ["fastapi>=0.100", "uvicorn[standard]>=0.23", "pandas>=2.0"]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "httpx>=0.25",
    "fastapi>=0.100",
    "confluent-kafka>=2.3",
]

[tool.setuptools.packages.find]
include = ["consumer*", "shared*", "producer*", "analysis*", "analytics_api*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
